[package]
name = "fbr-tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["ssr"]

[dependencies]
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
serde = { version = "1", features = ["derive"] }

[dependencies.leptos_axum]
version = "0.8"
optional = true

[dependencies.axum]
version = "0.8"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]
optional = true

[dependencies.tiberius]
version = "0.12"
features = ["tds73", "chrono"]
default-features = false
optional = true

[dependencies.tokio-util]
version = "0.7"
features = ["compat"]
optional = true

[dependencies.lopdf]
version = "0.34"
optional = true

[dependencies.dotenvy]
version = "0.15"
optional = true

[dependencies.tower]
version = "0.5"
optional = true

[dependencies.tower-http]
version = "0.6"
features = ["fs"]
optional = true

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.thiserror]
version = "2"
optional = true

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Response", "Blob", "Url", "HtmlInputElement"]
optional = true

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tiberius",
    "dep:tokio-util",
    "dep:lopdf",
    "dep:dotenvy",
    "dep:tower",
    "dep:tower-http",
    "dep:chrono",
    "dep:thiserror",
]

[package.metadata.leptos]
output-name = "fbr-tools"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/input.css"
assets-dir = "public"
site-addr = "0.0.0.0:4000"
reload-port = 4001
bin-features = ["ssr"]
lib-features = ["hydrate"]
bin-exe-name = "server"
